<resources>
    <string name="app_name">CinemaTalk</string>
    <string name="app_name_with_space">Cinema Talk</string>
    <string name="emailHintSignUp">Email</string>
    <string name="passwordHintSignUp">Password</string>
    <string name="forgatPasswordHintSignUp">Forgat Password?</string>
    <string name="signUpString">Sign Up</string>
    <string name="welcomeString">Welcome</string>
    <string name="loginString">Sign In</string>
    <string name="invalidCreds">Invalid Credentials</string>
    <string name="navigation_drawer_open">close\n</string>
    <string name="navigation_drawer_close">open</string>
    <string name="header_title">Cinema Talk</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="ChangeProfilePictureString">Change Profile Picture</string>
    <string name="save">Save</string>
    <string name="profileString">My Profile</string>
    <string name="reviewsFeedString">Reviews</string>
    <string name="nyReviewsFeedString">My Reviews</string>
    <string name="users_profile_default_string">Hello, friend!</string>
    <string name="user_email_default_string">email</string>
    <string name="delete_string">Delete</string>
    <string name="settings_string">Settings</string>
    <string name="edit_string">Edit</string>
    <string name="logout_string">Logout</string>
    <string name="editProfile">Edit Profile</string>
</resources>