<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Main Content Container -->
    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="32dp">

        <!-- Sign up -->
        <ImageButton
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:layout_below="@id/back_to_login"
            android:text="@string/signUpString"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupText"
            android:text=""
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="invisible"
            android:textColor="@color/red" />

        <!-- Email Section -->
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_box"
            android:layout_marginTop="8dp"
            android:text="@string/emailHintSignUp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailText"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_box"
            android:hint=""
            android:padding="16dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress" />

        <!-- First Name Section -->
        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_input"
            android:layout_marginTop="8dp"
            android:text="@string/firstName"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameText"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_box"
            android:hint=""
            android:padding="16dp"
            android:textSize="16sp" />

        <!-- Last Name Section -->
        <TextView
            android:id="@+id/lastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_input"
            android:layout_marginTop="8dp"
            android:text="@string/lastName"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastNameText"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_box"
            android:hint=""
            android:padding="16dp"
            android:textSize="16sp" />

        <!-- Password Section -->
        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_input"
            android:layout_marginTop="8dp"
            android:text="@string/passwordHintSignUp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordText"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_box"
            android:hint=""
            android:padding="16dp"
            android:textSize="16sp"
            android:inputType="textPassword" />

        <!-- Sign up -->
        <ImageButton
            android:id="@+id/sign_up_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle_button_background"
            android:src="@drawable/ic_arrow_forward" />

    </RelativeLayout>

    <!-- Progress Bar Overlay -->
    <ProgressBar
        android:id="@+id/progress_bar_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>